--- a/haha.ipynb
+++ b/haha.ipynb
@@ -7,7 +7,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "random.random()\n",
+    "random.randint(1, 6)\n",
+    "random.uniform(1, 6)\n",
+    "random.choice([1, 2, 3, 4, 5])\n",
+    "random.shuffle([1, 2, 3, 4, 5])\n",
+    "random.sample([1, 2, 3, 4, 5], 3)\n"
+   ]
   }
  ],
  "metadata": {
