--- a/haha.ipynb
+++ b/haha.ipynb
@@ -38,7 +38,10 @@
     "j = int(i , 8)\n",
     "# 将十六进制转换成二进制\n",
     "i = '10'\n",
-    "j = int(i , 16)\n"
+    "j = int(i , 16)\n",
+    "# 按位运算（与(&)、或(|)、取反(~)、异或(^)）\n",
+    "# 按位取反\n",
+    "-(x+1)\n"
    ]
   }
  ],
