Use scientific cast dice.

--- a/haha.ipynb
+++ b/haha.ipynb
@@ -32,16 +32,31 @@
     "j = hex(i)\n",
     "# 将二进制转换成十进制\n",
     "i = '10'\n",
-    "j = int(i , 2)\n",
+    "j = int(i, 2)\n",
     "# 将八进制转换成二进制\n",
     "i = '10'\n",
-    "j = int(i , 8)\n",
+    "j = int(i, 8)\n",
     "# 将十六进制转换成二进制\n",
     "i = '10'\n",
-    "j = int(i , 16)\n",
+    "j = int(i, 16)\n",
     "# 按位运算（与(&)、或(|)、取反(~)、异或(^)）\n",
     "# 按位取反\n",
-    "-(x+1)\n"
+    "-(x + 1)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# 生成10*10的矩阵\n",
+    "np.shape(10, 10)\n",
+    "# 由列表生成矩阵或向量\n",
+    "np.array([1, 2, 3, 6, 9])\n",
+    "# 生成数字具有一定范围的矩阵\n",
+    "np.arange()\n",
+    "# 改变数组的形状\n",
+    "np.reshape()\n",
+    "# 生成一个三行四列的随机数(1-10)矩阵\n",
+    "arr = np.random.randint(1, 10, (3, 4))\n",
+    "# NumPy基本运算（向量化的操作）\n",
+    "\n"
    ]
   }
  ],
